# vibrato-db

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark_suite.py  demo.py  docker-compose.yml  key_output.txt
.github/workflows/: ci.yml  nightly-gates.yml  python-wheels.yml  release.yml
benches/: hnsw.rs  hnsw_p99.rs  identify_p99.rs  query_filter_p99.rs  simd.rs
benchmarks/baseline/: hnsw_simd_baseline.tsv
crates/vibrato-core/: Cargo.toml
crates/vibrato-core/benches/: hnsw.rs  hnsw_p99.rs  simd.rs
crates/vibrato-core/src/: format.rs  format_v2.rs  lib.rs  metadata.rs  pq.rs  simd.rs  store.rs  training.rs
crates/vibrato-core/src/hnsw/: index.rs  mod.rs  node.rs  serialize.rs  visited.rs
crates/vibrato-edge/: Cargo.toml
crates/vibrato-edge/src/: lib.rs
crates/vibrato-ffi/: Cargo.toml  build.rs  pyproject.toml
crates/vibrato-ffi/src/: c_api.rs  lib.rs  python.rs
crates/vibrato-midas/: Cargo.toml
crates/vibrato-midas/src/: lib.rs
crates/vibrato-neural/: Cargo.toml
crates/vibrato-neural/src/: decoder.rs  inference.rs  lib.rs  models.rs  resampler.rs  spectrogram.rs  windowing.rs
crates/vibrato-server/: Cargo.toml
crates/vibrato-server/src/prod/: api.rs  auth.rs  catalog.rs  engine.rs  filter.rs  flight.rs  mod.rs  model.rs  recovery.rs  snapshot.rs
crates/vibrato-vst/: Cargo.toml
crates/vibrato-vst/src/: commands.rs  dsp_state.rs  editor.rs  lib.rs  worker.rs
demo_data/: init.json
docs/: DESIGN.md  PRODUCTION_RUNBOOK_V21.md  PRODUCTION_RUNBOOK_V3.md
docs/v3/: baseline.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: load_archive_segment_handle.rs  read_v2_header.rs
python/: README.md  ingest.py  pyproject.toml  requirements.txt  test_writer.py  visualize.py
python/vibrato/: __init__.py  audio.py  client.py  embeddings.py  writer.py
scripts/: bench_hnsw_p99.sh  bench_query_filter_p99.sh
scripts/ci/: run_crash_matrix.sh
scripts/ops/: canary_rollback_drill.sh
scripts/perf/: bench_clean_run.sh  check_bench_regression.sh  run_madvise_ab.sh
scripts/smoke/: container_smoke.sh
scripts/soak/: run_mixed_workload_soak.sh
src/: lib.rs  main.rs  server.rs  simd.rs
src/hnsw/: index.rs  node.rs  serialize.rs  visited.rs
src/prod/: api.rs  auth.rs  catalog.rs  engine.rs  filter.rs  mod.rs  model.rs  recovery.rs  snapshot.rs
tests/: golden_set_v2_e2e.rs  golden_set_v3_e2e.rs  persistence_test.rs  restart_persistence_e2e.rs  v2_admin_ops_e2e.rs  v2_archive_pq_e2e.rs  v2_catalog_protocol_e2e.rs  v2_catalog_timeout_e2e.rs  v2_catalog_wal_growth_guard_e2e.rs  v2_compaction_levels_e2e.rs  v2_crash_matrix_kill9_e2e.rs  v2_flight_ingest_e2e.rs  v2_flight_row_materialization_guard.rs  v2_flight_stress_million_ops.rs  v2_identify_archive_e2e.rs  v2_identify_e2e.rs  v2_identify_protocol_e2e.rs  v2_identify_validation_e2e.rs  v2_madvise_ab_perf_e2e.rs  v2_malformed_input_fuzz_smoke.rs  v2_model_property_proptest.rs  v2_recovery_orphan_e2e.rs  v2_snapshot_restore_e2e.rs  v2_soak_mixed_workload_e2e.rs  v2_stress_million_ops.rs  v2_stress_million_ops_direct.rs  v3_admin_ops_e2e.rs  v3_archive_pq_e2e.rs  v3_catalog_protocol_e2e.rs  v3_catalog_timeout_e2e.rs  v3_catalog_wal_growth_guard_e2e.rs  v3_compaction_levels_e2e.rs  v3_crash_matrix_kill9_e2e.rs  v3_fault_injection_e2e.rs  v3_flight_ingest_e2e.rs  v3_flight_row_materialization_guard.rs  v3_flight_stress_million_ops.rs  v3_flight_wal_ipc_guard.rs  v3_http_body_limit_e2e.rs  v3_idempotency_key_limit_e2e.rs  (+12 more)
