[workspace]
resolver = "2"
members = [
    "crates/vibrato-core",
    "crates/vibrato-neural",
    "crates/vibrato-ffi",
    "crates/vibrato-vst",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[package]
name = "vibrato-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A persistent, disk-backed vector search engine with HNSW indexing"

[dependencies]
vibrato-core = { path = "crates/vibrato-core" }
vibrato-neural = { path = "crates/vibrato-neural" }

# HTTP Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }

# Concurrency
parking_lot = "0.12"
rayon = "1.11"

# Utilities
rand = "0.8"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arc-swap = "1.8.1"
libc = "0.2"
sha2 = "0.10"
fixedbitset = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "hnsw"
harness = false

[profile.release]
lto = true
codegen-units = 1

# Enable SIMD optimizations: RUSTFLAGS="-C target-cpu=native"
