[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibrato-db"
version = "0.2.0"
description = "Python SDK for Vibrato V3"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Vibrato" }]
dependencies = [
  "numpy>=1.24",
  "requests>=2.31",
  "pyarrow>=14.0.0",
]

[project.optional-dependencies]
polars = ["polars>=0.20"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["vibrato*"]
