[package]
name = "vibrato-ffi"
version = "0.2.0"
edition = "2021"
description = "Python (PyO3), C, and WASM bindings for Vibrato"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vibrato-core = { path = "../vibrato-core" }
vibrato-neural = { path = "../vibrato-neural" }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# Utilities
thiserror = "1.0"
tracing = "0.1"

[features]
default = []
python = ["pyo3"]
