[package]
name = "vibrato-ffi"
version = "0.2.0"
edition = "2021"
description = "Python (PyO3), C, and WASM bindings for Vibrato"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vibrato-core = { path = "../vibrato-core" }

# Python bindings
# Use abi3-py311 so Python buffer protocol (`PyBuffer`) is available under
# the limited API for safe zero-copy query paths.
pyo3 = { version = "0.22", features = ["abi3-py311"], optional = true }

# Utilities
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"

[features]
default = []
# Embedding/test path: links and initializes CPython for Rust tests/binaries.
python = ["pyo3", "pyo3/auto-initialize"]
# Extension-module path: build Python extension with dynamic symbol lookup behavior.
python-extension = ["python", "pyo3/extension-module"]

[dev-dependencies]
tempfile = "3"
