[package]
name = "vibrato-neural"
version = "0.2.0"
edition = "2021"
description = "Audio ingestion, DSP, and ONNX inference engine"
license = "MIT"

[features]
default = ["onnx"]
transient_aware = []
onnx = [
  "dep:ort",
  "dep:tokenizers",
  "dep:reqwest",
  "dep:directories",
  "dep:sha2",
  "dep:hex",
  "dep:tokio",
  "dep:rayon",
]

[dependencies]
vibrato-core = { path = "../vibrato-core" }

# Audio decoding (pure Rust, no ffmpeg)
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac", "flac", "ogg", "vorbis", "wav", "pcm"] }

# Resampling
rubato = "0.16"

# FFT / Spectrogram
rustfft = "6.2"

# ONNX inference — optional, requires rustc 1.88+ for ort 2.x
# Enable with: cargo build --features onnx
# ONNX inference — optional, requires rustc 1.88+ for ort 2.x
# Enable with: cargo build --features onnx
# ONNX inference
# We use load-dynamic to avoid static linking hell
ort = { version = "2.0.0-rc.9", features = ["load-dynamic", "ndarray"], optional = true }
ndarray = "0.15"
tokenizers = { version = "0.19", optional = true }

# Model Management & Security
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], optional = true }
directories = { version = "5.0", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
rayon = { version = "1.10", optional = true }

# Utilities
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
