[package]
name = "vibrato-server"
version = "0.2.0"
edition = "2021"
description = "Vibrato production server/control-plane components"
license = "MIT"

[features]
default = []
fuzzing = []

[dependencies]
vibrato-core = { path = "../vibrato-core" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
arc-swap = "1.8.1"
parking_lot = "0.12"
rayon = "1.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3.1"
sha2 = "0.10"
libc = "0.2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
