[package]
name = "vibrato-vst"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Critical for VST/CLAP

[dependencies]
# The Plugin Framework
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui = "0.31" # Match version used by nih_plug_egui (checked in logs)

# Internal Crates
vibrato-core = { path = "../vibrato-core" }
vibrato-neural = { path = "../vibrato-neural" }

# Concurrency
crossbeam-channel = "0.5" # For UI <-> Worker communication
rtrb = "0.3" # Lock-free Ring Buffer for Audio Thread -> Worker
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
# Actually user said "no Mutex", so we use channels.
# But for state sharing (like configuration), we might need it.

# Filesystem
directories = "5.0"
log = "0.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
